# rustcamp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: checks.yml  docs.yml
1-1/: input.txt
1-1/src/: main.rs
1-2/: Cargo.toml
1-2/src/: main.rs
2-1/: Cargo.toml  also-valid.txt  feedback.txt  input.txt  invalid1.txt  invalid2.txt  invalid3.txt
2-1/src/: main.rs
2-2/: Cargo.toml  feedback.txt  input.txt
2-2/src/: main.rs
bft/: Cargo.toml  ci-plan.txt  hello-wait.txt  unclosed.txt  unopened.txt
bft/bft_interp/: Cargo.toml
bft/bft_interp/src/: lib.rs
bft/bft_types/: Cargo.toml
bft/bft_types/src/: lib.rs
bft/src/: cli.rs  main.rs
src/: main.rs
