[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bft_interp = { version = "0.1.0", path = "bft_interp" }
bft_types = { version = "0.1.0", path = "bft_types" }
clap = { version = "4.1.8", features = ["derive"] }

[workspace]
members = [  
  "bft_types",
  "bft_interp",
]
